--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.5"
+    "express-session": "^1.15.5",
+    "express-validator": "^3.2.1"
   }
 }
